kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/stdlib/src/nat/int.k
use super.*;

pub type Int {
    neg(n: Pos): Int,
    nat(n: Nat): Int,
}
