kanc/src/tests/sample_code/should_fail/single_file/parse/empty_parens/empty_match_case_params.k
type U {
    t: U,
}

let foo = match U.t {
    t() => U.t,
};
